--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,6 +16,13 @@
     <a class="sidebar-nav-item" href="{{ site.baseurl }}/atom.xml">RSS</a>
   </nav>
 
+  <ul>
+    <li class="fontawesome-envelope" href="#"></li>
+    <li class="fontawesome-github" href="https://github.com/han-gyeol"></li>
+    <li class="fontawesome-linkedin"href="https://www.linkedin.com/in/han-gyeol-oh-21424112a/"></li>
+    <li class="fontawesome-rss" href="{{ site.baseurl }}/atom.xml"></li>
+  </ul>
+
   <div class="sidebar-item">
     <p>
       &copy; {{ site.time | date: '%Y' }}. All rights reserved.
