--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -261,6 +261,12 @@ a.sidebar-nav-item:focus {
   }
 }
 
+@import url(http://weloveiconfonts.com/api/?family=fontawesome);
+/* fontawesome */
+[class*="fontawesome-"]:before {
+  font-family: 'FontAwesome', sans-serif;
+}
+
 /* Slide effect
  *
  * Handle the sliding effects of the sidebar and content in one spot, seperate
