--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,10 +17,40 @@
   </nav>
 
   <ul>
-    <li class="fontawesome-envelope" href="#"></li>
-    <li class="fontawesome-github" href="https://github.com/han-gyeol"></li>
-    <li class="fontawesome-linkedin"href="https://www.linkedin.com/in/han-gyeol-oh-21424112a/"></li>
-    <li class="fontawesome-rss" href="{{ site.baseurl }}/atom.xml"></li>
+    <li class="fa fa-envelope" aria-hidden="true" href="#"></li>
+    <li class="fa fa-github" aria-hidden="true" href="https://github.com/han-gyeol"></li>
+    <li class="fa fa-linkedin" aria-hidden="true" href="https://www.linkedin.com/in/han-gyeol-oh-21424112a/"></li>
+    <li class="fa fa-rss" aria-hidden="true" href="{{ site.baseurl }}/atom.xml"></li>
+  </ul>
+
+  <ul>
+    <li>
+      <a class="fa fa-envelope" aria-hidden="true" href="#"></a>
+    </li>
+    <li>
+      <a class="fa fa-github" aria-hidden="true" href="https://github.com/han-gyeol"></a>
+    </li>
+    <li>
+      <a class="fa fa-linkedin" aria-hidden="true" href="https://www.linkedin.com/in/han-gyeol-oh-21424112a/"></a>
+    </li>
+    <li>
+      <a class="fa fa-rss" aria-hidden="true" href="{{ site.baseurl }}/atom.xml"></a>
+    </li>
+  </ul>
+
+  <ul>
+    <li>
+      <span class="fa fa-envelope" aria-hidden="true" href="#"></span>
+    </li>
+    <li>
+      <span class="fa fa-github" aria-hidden="true" href="https://github.com/han-gyeol"></span>
+    </li>
+    <li>
+      <span class="fa fa-linkedin" aria-hidden="true" href="https://www.linkedin.com/in/han-gyeol-oh-21424112a/"></span>
+    </li>
+    <li>
+      <span class="fa fa-rss" aria-hidden="true" href="{{ site.baseurl }}/atom.xml"></span>
+    </li>
   </ul>
 
   <div class="sidebar-item">
