--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -53,6 +53,13 @@
     </li>
   </ul>
 
+  <div>
+    <a class="fa fa-envelope" aria-hidden="true" href="#"></a>
+    <a class="fa fa-github" aria-hidden="true" href="https://github.com/han-gyeol"></a>
+    <a class="fa fa-linkedin" aria-hidden="true" href="https://www.linkedin.com/in/han-gyeol-oh-21424112a/"></a>
+    <a class="fa fa-rss" aria-hidden="true" href="{{ site.baseurl }}/atom.xml"></a>
+  </div>
+
   <div class="sidebar-item">
     <p>
       &copy; {{ site.time | date: '%Y' }}. All rights reserved.
