--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -60,6 +60,13 @@
     <a class="fa fa-rss"></a>
   </div>
 
+  <div>
+    <i class="fa fa-envelope"></i>
+    <i class="fa fa-github"></i>
+    <i class="fa fa-linkedin"></i>
+    <i class="fa fa-rss"></i>
+  </div>
+
   <div class="sidebar-item">
     <p>
       &copy; {{ site.time | date: '%Y' }}. All rights reserved.
