--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,55 +16,11 @@
     <a class="sidebar-nav-item" href="{{ site.baseurl }}/atom.xml">RSS</a>
   </nav>
 
-  <ul>
-    <li class="fa fa-envelope" aria-hidden="true" href="#"></li>
-    <li class="fa fa-github" aria-hidden="true" href="https://github.com/han-gyeol"></li>
-    <li class="fa fa-linkedin" aria-hidden="true" href="https://www.linkedin.com/in/han-gyeol-oh-21424112a/"></li>
-    <li class="fa fa-rss" aria-hidden="true" href="{{ site.baseurl }}/atom.xml"></li>
-  </ul>
-
-  <ul>
-    <li>
-      <a class="fa fa-envelope" aria-hidden="true" href="#"></a>
-    </li>
-    <li>
-      <a class="fa fa-github" aria-hidden="true" href="https://github.com/han-gyeol"></a>
-    </li>
-    <li>
-      <a class="fa fa-linkedin" aria-hidden="true" href="https://www.linkedin.com/in/han-gyeol-oh-21424112a/"></a>
-    </li>
-    <li>
-      <a class="fa fa-rss" aria-hidden="true" href="{{ site.baseurl }}/atom.xml"></a>
-    </li>
-  </ul>
-
-  <ul>
-    <li>
-      <span class="fa fa-envelope" aria-hidden="true" href="#"></span>
-    </li>
-    <li>
-      <span class="fa fa-github" aria-hidden="true" href="https://github.com/han-gyeol"></span>
-    </li>
-    <li>
-      <span class="fa fa-linkedin" aria-hidden="true" href="https://www.linkedin.com/in/han-gyeol-oh-21424112a/"></span>
-    </li>
-    <li>
-      <span class="fa fa-rss" aria-hidden="true" href="{{ site.baseurl }}/atom.xml"></span>
-    </li>
-  </ul>
-
   <div>
-    <a class="fa fa-envelope"></a>
-    <a class="fa fa-github"></a>
-    <a class="fa fa-linkedin"></a>
-    <a class="fa fa-rss"></a>
-  </div>
-
-  <div>
-    <i class="fa fa-envelope"></i>
-    <i class="fa fa-github"></i>
-    <i class="fa fa-linkedin"></i>
-    <i class="fa fa-rss"></i>
+    <a class="fa fa-envelope fa-4x" aria-hidden="true" href="#"></a>
+    <a class="fa fa-github fa-4x" aria-hidden="true" href="https://github.com/han-gyeol"></a>
+    <a class="fa fa-linkedin fa-4x" aria-hidden="true" href="https://www.linkedin.com/in/han-gyeol-oh-21424112a/"></a>
+    <a class="fa fa-rss fa-4x" aria-hidden="true" href="{{ site.baseurl }}/atom.xml"></a>
   </div>
 
   <div class="sidebar-item">
