--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,11 +16,11 @@
     <a class="sidebar-nav-item" href="{{ site.baseurl }}/atom.xml">RSS</a>
   </nav>
 
-  <div>
-    <a class="fa fa-envelope fa-4x" aria-hidden="true" href="#"></a>
-    <a class="fa fa-github fa-4x" aria-hidden="true" href="https://github.com/han-gyeol"></a>
-    <a class="fa fa-linkedin fa-4x" aria-hidden="true" href="https://www.linkedin.com/in/han-gyeol-oh-21424112a/"></a>
-    <a class="fa fa-rss fa-4x" aria-hidden="true" href="{{ site.baseurl }}/atom.xml"></a>
+  <div class="sidebar-icons">
+    <a class="sidebar-icon fa fa-envelope fa-3x" aria-hidden="true" href="#"></a>
+    <a class="sidebar-icon fa fa-github fa-3x" aria-hidden="true" href="https://github.com/han-gyeol"></a>
+    <a class="sidebar-icon fa fa-linkedin fa-3x" aria-hidden="true" href="https://www.linkedin.com/in/han-gyeol-oh-21424112a/"></a>
+    <a class="sidebar-icon fa fa-rss fa-3x" aria-hidden="true" href="{{ site.baseurl }}/atom.xml"></a>
   </div>
 
   <div class="sidebar-item">
