--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,13 +11,10 @@
   <nav class="sidebar-nav">
     <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
     <a class="sidebar-nav-item" href="{{ site.baseurl }}/about">About</a>
-    <a class="sidebar-nav-item" href="https://github.com/han-gyeol">GitHub</a>
-    <a class="sidebar-nav-item" href="https://www.linkedin.com/in/han-gyeol-oh-21424112a/">Linkedin</a>
-    <a class="sidebar-nav-item" href="{{ site.baseurl }}/atom.xml">RSS</a>
   </nav>
 
   <div class="sidebar-icons">
-    <a class="sidebar-icon fa fa-envelope fa-3x" aria-hidden="true" href="#"></a>
+    <a class="sidebar-icon fa fa-envelope fa-3x" aria-hidden="true" href="mailto:leook0209@gmail.com"></a>
     <a class="sidebar-icon fa fa-github fa-3x" aria-hidden="true" href="https://github.com/han-gyeol"></a>
     <a class="sidebar-icon fa fa-linkedin fa-3x" aria-hidden="true" href="https://www.linkedin.com/in/han-gyeol-oh-21424112a/"></a>
     <a class="sidebar-icon fa fa-rss fa-3x" aria-hidden="true" href="{{ site.baseurl }}/atom.xml"></a>
