--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -263,12 +263,12 @@ a.sidebar-nav-item:focus {
 
 .sidebar-icons {
   text-align: center;
-  margin-top: 0.5rem;
+  margin-top: 1rem;
 }
 
 .sidebar-icon {
   margin: 0.3rem;
-  padding: 0.1rem;
+  text-decoration: none;
 }
 
 /* Slide effect
