--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -268,7 +268,8 @@ a.sidebar-nav-item:focus {
 
 .sidebar-icon {
   margin: 0.3rem;
-  text-decoration: none;
+  padding-bottom: 0.1rem;
+  /*text-decoration: none;*/
 }
 
 /* Slide effect
