--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,10 +1,17 @@
-<script src="https://apis.google.com/js/plusone.js"></script>
-<div id="comments"></div>
-<script>
-  gapi.comments.render('comments', {
-      href: window.location,
-      width: '624',
-      first_party_property: 'BLOGGER',
-      view_type: 'FILTERED_POSTMOD'
-});
+{% if page.comments %}
+<div id="disqus_thread"></div>
+<script type="text/javascript">
+    /* * * CONFIGURATION VARIABLES * * */
+    var disqus_shortname = %%%hangyeoloh%%%;
+    var disqus_identifier = "{{ site.disqusid }}{{ page.url | replace:'index.html','' }}";
+    console.log(disqus_identifier);
+
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
 </script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+{% endif %}
