--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -22,7 +22,7 @@
 
   <div class="sidebar-item">
     <p>
-      &copy; {{ site.time | date: '%Y' }}. All rights reserved.
+      &copy; {{ site.time | date: '%Y' }}. All rights reserved. {{site}}, {{page}}
     </p>
   </div>
 </div>
