--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,10 @@
     <label for="sidebar-checkbox" class="sidebar-toggle"></label>
 
     <script>
+    console.log(site);
+    console.log(page);
+    console.log({{site}});
+    console.log({{page}});
       (function(document) {
         var toggle = document.querySelector('.sidebar-toggle');
         var sidebar = document.querySelector('#sidebar');
