--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,7 @@
 
   <body class="theme-base-0c sidebar-overlay">
     <script>
-    console.log(site);
-    console.log(page);
-    console.log({{site}});
-    console.log({{page}});
+    console.log(page.title);
     </script>
 
     {% include sidebar.html %}
