--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 
   <body class="theme-base-0c sidebar-overlay">
     <script>
-    console.log({{page.title}});
+    console.log({{page.url}});
     </script>
 
     {% include sidebar.html %}
