--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -2,7 +2,7 @@
 <div id="disqus_thread"></div>
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES * * */
-    var disqus_shortname = %%%hangyeoloh%%%;
+    var disqus_shortname = "{{ site.disqusid }}";
     var disqus_identifier = "{{ site.disqusid }}{{ page.url | replace:'index.html','' }}";
     console.log(disqus_identifier);
 
