Edit tags and categories

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,7 +9,9 @@
   </div>
 
   <nav class="sidebar-nav">
-    <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
+    <a class="sidebar-nav-item" href="{{ site.baseurl }}">Home</a>
+    <a class="sidebar-nav-item" href="{{ site.baseurl }}/categories">Categories</a>
+    <a class="sidebar-nav-item" href="{{ site.baseurl }}/tags">Tags</a>
     <a class="sidebar-nav-item" href="{{ site.baseurl }}/about">About</a>
   </nav>
 
