--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -338,7 +338,7 @@ a.sidebar-nav-item:focus {
 
 /* Meta data line below post title */
 .post-date {
-  display: block;
+  display: inline-block;
   margin-top: -.5rem;
   margin-bottom: 1rem;
   color: #9a9a9a;
@@ -581,6 +581,7 @@ a.pagination-item:hover {
 }
 
 .post-tag {
+    display: inline-block;
     margin: .5rem;
 }
 
