--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,5 +4,10 @@ layout: default
 
 <div class="page">
   <h1 class="page-title">{{ page.title }}</h1>
+  {% if page.tags %} |
+  {% for tag in page.tags %}
+    <a href="{{ site.baseurl }}{{ site.tag_page }}#{{ tag | slugify }}" class="post-tag">{{ tag }}</a>
+  {% endfor %}
+  {% endif %}
   {{ content }}
 </div>
