--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -344,28 +344,28 @@ a.sidebar-nav-item:focus {
   color: #9a9a9a;
 }
 
-/* Related posts */
-.related {
+/* latest posts */
+.latest {
   padding-top: 2rem;
   padding-bottom: 2rem;
   border-top: 1px solid #eee;
 }
-.related-posts {
+.latest-posts {
   padding-left: 0;
   list-style: none;
 }
-.related-posts h3 {
+.latest-posts h3 {
   margin-top: 0;
 }
-.related-posts li small {
+.latest-posts li small {
   font-size: 75%;
   color: #999;
 }
-.related-posts li a:hover {
+.latest-posts li a:hover {
   color: #268bd2;
   text-decoration: none;
 }
-.related-posts li a:hover small {
+.latest-posts li a:hover small {
   color: inherit;
 }
 
@@ -462,7 +462,7 @@ a.pagination-item:hover {
 }
 .theme-base-08 .container a,
 .theme-base-08 .sidebar-toggle,
-.theme-base-08 .related-posts li a:hover {
+.theme-base-08 .latest-posts li a:hover {
   color: #ac4142;
 }
 
@@ -474,7 +474,7 @@ a.pagination-item:hover {
 }
 .theme-base-09 .container a,
 .theme-base-09 .sidebar-toggle,
-.theme-base-09 .related-posts li a:hover {
+.theme-base-09 .latest-posts li a:hover {
   color: #d28445;
 }
 
@@ -486,7 +486,7 @@ a.pagination-item:hover {
 }
 .theme-base-0a .container a,
 .theme-base-0a .sidebar-toggle,
-.theme-base-0a .related-posts li a:hover {
+.theme-base-0a .latest-posts li a:hover {
   color: #f4bf75;
 }
 
@@ -498,7 +498,7 @@ a.pagination-item:hover {
 }
 .theme-base-0b .container a,
 .theme-base-0b .sidebar-toggle,
-.theme-base-0b .related-posts li a:hover {
+.theme-base-0b .latest-posts li a:hover {
   color: #90a959;
 }
 
@@ -510,7 +510,7 @@ a.pagination-item:hover {
 }
 .theme-base-0c .container a,
 .theme-base-0c .sidebar-toggle,
-.theme-base-0c .related-posts li a:hover {
+.theme-base-0c .latest-posts li a:hover {
   color: #75b5aa;
 }
 
@@ -522,7 +522,7 @@ a.pagination-item:hover {
 }
 .theme-base-0d .container a,
 .theme-base-0d .sidebar-toggle,
-.theme-base-0d .related-posts li a:hover {
+.theme-base-0d .latest-posts li a:hover {
   color: #6a9fb5;
 }
 
@@ -534,7 +534,7 @@ a.pagination-item:hover {
 }
 .theme-base-0e .container a,
 .theme-base-0e .sidebar-toggle,
-.theme-base-0e .related-posts li a:hover {
+.theme-base-0e .latest-posts li a:hover {
   color: #aa759f;
 }
 
@@ -546,7 +546,7 @@ a.pagination-item:hover {
 }
 .theme-base-0f .container a,
 .theme-base-0f .sidebar-toggle,
-.theme-base-0f .related-posts li a:hover {
+.theme-base-0f .latest-posts li a:hover {
   color: #8f5536;
 }
 
