--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,10 +13,10 @@ layout: default
   {{ content }}
 </div>
 
-<div class="related">
-  <h2>Related Posts</h2>
-  <ul class="related-posts">
-    {% for post in site.related_posts limit:3 %}
+<div class="latest">
+  <h2>Latest Posts</h2>
+  <ul class="latest-posts">
+    {% for post in site.latest_posts limit:3 %}
       <li>
         <h3>
           <a href="{{ site.baseurl }}{{ post.url }}">
