--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -352,28 +352,28 @@ tbody tr:nth-child(odd) th {
   color: #9a9a9a;
 }
 
-/* Related posts */
-.related {
+/* latest posts */
+.latest {
   padding-top: 2rem;
   padding-bottom: 2rem;
   border-top: 1px solid #eee;
 }
-.related-posts {
+.latest-posts {
   padding-left: 0;
   list-style: none;
 }
-.related-posts h3 {
+.latest-posts h3 {
   margin-top: 0;
 }
-.related-posts li small {
+.latest-posts li small {
   font-size: 75%;
   color: #999;
 }
-.related-posts li a:hover {
+.latest-posts li a:hover {
   color: #268bd2;
   text-decoration: none;
 }
-.related-posts li a:hover small {
+.latest-posts li a:hover small {
   color: inherit;
 }
 
