--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: default
 <div class="latest">
   <h2>Latest Posts</h2>
   <ul class="latest-posts">
-    {% for post in site.latest_posts limit:3 %}
+    {% for post in site.related_posts limit:3 %}
       <li>
         <h3>
           <a href="{{ site.baseurl }}{{ post.url }}">
